k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tile-2048
  namespace: game
spec:
  type: ClusterIP
  selector:
    app: tile-2048
  ports:
  - port: 81
    targetPort: 80
