k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tile-2048-ingress
  namespace: game
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: 2048.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tile-2048
            port:
              number: 81
